--- a/frontend/index.html
+++ b/frontend/index.html
@@ -121,7 +121,7 @@
   <div class="corner bottom-right"></div>
 
   <!-- 👁️ Logo -->
-  <img src="assets/logo.png" alt="NEXTRA Logo" class="logo" />
+  <img src="assets/Logo.png" alt="NEXTRA Logo" class="logo" />
 
   <!-- 🖼️ Image that contains the name + tagline -->
   <img src="assets/image.png" alt="NEXTRA Title Image" class="brand-img" />
@@ -156,3 +156,4 @@
   <footer>👁️ NEXTRA – Where Security Starts to Sense.</footer>
 </body>
 </html>
+
